--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Hello from Avyaya!</h1>
-    <p>This is a simple webpage hosted on GitHub Pages.</p>
+    <p>This is a my first webpage. Thanks for checking this out ! :)</p>
 </body>
 </html>
