--- a/index.html
+++ b/index.html
@@ -3,10 +3,95 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome to Avyaya</title>
+    <title>Avyaya's Gaming World</title>
+    <style>
+        body {
+            background-color: #1e1e1e;
+            color: #f0f0f0;
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+        header {
+            background-color: #242424;
+            width: 100%;
+            padding: 20px;
+            text-align: center;
+        }
+        h1 {
+            font-size: 3em;
+            color: #00ff7f;
+            text-shadow: 0px 0px 8px #00ff7f;
+        }
+        nav {
+            margin: 20px;
+        }
+        nav a {
+            color: #f0f0f0;
+            padding: 10px 20px;
+            text-decoration: none;
+            background-color: #333;
+            border-radius: 5px;
+            margin: 0 10px;
+            transition: background-color 0.3s;
+        }
+        nav a:hover {
+            background-color: #00ff7f;
+        }
+        section {
+            margin: 20px;
+            padding: 20px;
+            background-color: #333;
+            border-radius: 10px;
+            width: 90%;
+            max-width: 800px;
+        }
+        section h2 {
+            color: #00ff7f;
+            text-shadow: 0px 0px 5px #00ff7f;
+        }
+        p {
+            font-size: 1.2em;
+        }
+        footer {
+            margin: 40px 0;
+            color: #888;
+        }
+    </style>
 </head>
 <body>
-    <h1>Hello from Avyaya!</h1>
-    <p>This is a my first webpage. Thanks for checking this out ! :)</p>
+
+    <header>
+        <h1>Avyaya's Gaming World</h1>
+    </header>
+
+    <nav>
+        <a href="#minecraft">Minecraft</a>
+        <a href="#roblox">Roblox</a>
+        <a href="#more-games">More Games</a>
+    </nav>
+
+    <section id="minecraft">
+        <h2>Minecraft</h2>
+        <p>Minecraft is one of my favorite games! I love building and exploring new worlds. It’s a game where the only limit is your imagination.</p>
+    </section>
+
+    <section id="roblox">
+        <h2>Roblox</h2>
+        <p>Roblox lets me play thousands of user-created games. From action-packed adventures to building my own world, it's always fun!</p>
+    </section>
+
+    <section id="more-games">
+        <h2>More Games</h2>
+        <p>I'm always discovering new games to play! Stay tuned for updates on the latest games I’m trying out.</p>
+    </section>
+
+    <footer>
+        <p>Website created by Avyaya. Stay tuned for more updates!</p>
+    </footer>
+
 </body>
 </html>
